Add Roy, Lucas, .donthave and 5/row

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,9 @@ a {
 .char-card .name {
         font-size: 1.3em;
 }
+.char-card .name.donthave {
+	color: #700;
+}
 
 .s-tier:before {
         content: "S";
