Add Source reference (to here) and include footer on every page

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,5 +65,6 @@ a {
 </head>
 <body>
 {% block main %}{% endblock %}
+<hr><small class="row"><a href="/u/kondou/">Kondou's amiibos</a> – <a href="/u/seijirou/">Seijirou's amiibos</a> – <a href="https://www.eventhubs.com/tiers/ssbu/">Richtige Liste (Eventhubs)</a> – Ergebnisse auf dieser Seite sind zufällig. – <a href="https://git.ts.unde.re/niduroki/smash-py">Source</a></small>
 </body>
 </html>
