--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,5 @@
 		</div><hr><div class="e-tier row">
 	{% endif %}
 {% endfor %}
-</div><!-- .e-tier --><hr>
-<small class="row"><a href="/u/kondou/">Kondou's amiibos</a> – <a href="/u/seijirou/">Seijirou's amiibos</a> – <a href="https://www.eventhubs.com/tiers/ssbu/">Richtige Liste (Eventhubs)</a> – Ergebnisse auf dieser Seite sind zufällig.</small>
+</div><!-- .e-tier -->
 {% endblock %}
