--- a/templates/base.html
+++ b/templates/base.html
@@ -60,11 +60,16 @@ a {
         font-size: 7em;
         color: #850;
 }
+.z-tier:before {
+        content: "Z";
+        font-size: 7em;
+        color: #000;
+}
 </style>
 <title>Tier-Liste</title>
 </head>
 <body>
 {% block main %}{% endblock %}
-<hr><small class="row"><a href="/u/kondou/">Kondou's amiibos</a> – <a href="/u/seijirou/">Seijirou's amiibos</a> – <a href="https://www.eventhubs.com/tiers/ssbu/">Richtige Liste (Eventhubs)</a> – Ergebnisse auf dieser Seite sind zufällig. – <a href="https://git.ts.unde.re/niduroki/smash-py">Source</a></small>
+<hr><small class="row"><a href="/u/niduroki/">Nidurokis amiibos</a> – <a href="/u/seijirou/">Seijirous amiibos</a> – <a href="https://www.eventhubs.com/tiers/ssbu/">Richtige Liste (Eventhubs)</a> – Ergebnisse auf dieser Seite sind zufällig. – <a href="https://git.ts.unde.re/niduroki/smash-py">Source</a></small>
 </body>
 </html>
