--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block main %}
-<h1><a href="/">Schäpers Lab</a></h1>
+<h1><a href="/">Niduroki Labs</a></h1>
 <h2>Tier Liste</h2>
 <hr>
 <div class="row">
