--- a/templates/user.html
+++ b/templates/user.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block main %}
-<h1><a href="/">Schäpers Lab</a></h1>
+<h1><a href="/">Niduroki Labs</a></h1>
 <div class="row">
 {% for char in smash_chars %}
 	<div class="char-card">
