--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,6 @@ a {
 </head>
 <body>
 {% block main %}{% endblock %}
-<hr><small class="row"><a href="/u/niduroki/">Nidurokis amiibos</a> – <a href="/u/seijirou/">Seijirous amiibos</a> – <a href="https://www.eventhubs.com/tiers/ssbu/">Richtige Liste (Eventhubs)</a> – Ergebnisse auf dieser Seite sind zufällig. – <a href="https://git.ts.unde.re/niduroki/smash-py">Source</a></small>
+<hr><small class="row"><a href="/u/niduroki/">Nidurokis amiibos</a> – <a href="/u/seijirou/">Seijirous amiibos</a> – <a href="https://www.eventhubs.com/tiers/ssbu/">Richtige Liste (Eventhubs)</a> – Ergebnisse auf dieser Seite sind zufällig. – <a href="https://git.niduroki.net/niduroki/smash-py">Source</a></small>
 </body>
 </html>
